--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "del": "^1.1.1",
     "gulp": "^3.8.11",
-    "gulp-imagemin": "^2.2.1"
+    "gulp-imagemin": "^2.2.1",
+    "request": "^2.55.0"
   }
 }
