--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "readmeFilename": "README.md",
   "devDependencies": {
     "del": "^1.1.1",
+    "dplus": "0.0.3",
     "gulp": "^3.8.11",
     "gulp-imagemin": "^2.2.1",
     "request": "^2.55.0"
